--- a/formula.yaml
+++ b/formula.yaml
@@ -1,12 +1,2 @@
-formula:
-   operands:
-   -  operand: 5
-   -  operand: 3
-   -  operand: 8
-   -  operand: 5
-   -  operand: 9
-   operators:
-   -  operator: -
-   -  operador: /
-   -  operator: +
-   -  operator: *
+operands: [5, 3, 8, 5, 9]
+operations: ["-", "/", "+", "*"]
